Sat Aug 18 18:17:44 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch]: add some code for choosable servers (not
	  implemented yet

	* daemon/misc.c: search our own displays for used numbers first

	* daemon/gdm.c, daemon/server.c, daemon/slave.c:  Finish implementing
	  choosing of flexi servers

	* daemon/slave.c, daemon/verify{,-pam,-crypt,-shadow}.[ch]:
	  Correctly implement credential setting and some pam related	
	  fixes

	* gui/gdmconfig.(c|h|glade): Start on making configuration for 
	  all the new stuff including the server definitions, not finished
	  yet.

	* gui/gdmflexiserver.c: if there are multiple flexible servers,
	  give the user a choice

	* gui/gdmflexiserver-xnest.desktop.in: only show if Xnest exists

Fri Aug 17 23:56:14 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: Add a standard server definition and the Xnest
	  key

	* daemon/gdm.[ch], daemon/server.c:  Add server definition reading
	  and using

Fri Aug 17 14:47:08 2001  George Lebl <jirka@5z.com>

	* docs/C/Makefile.am: fix rules since the .sgml file changed

Fri Aug 17 04:42:34 2001  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/display.c, daemon/gdm-net.[ch],
	  daemon/gdm.[ch], daemon/server.[ch], daemon/slave.[ch]:
 	  Finish implementation of flexible servers and lots of related
	  cleanup and restructuring that was related.

	* daemon/server.c: close all fd's when running the X server.

	* gui/gdmflexiserver.c: implement the updated protocol and implement
	  all the error codes

	* gui/Makefile.am, gui/gdmflexiserver(|-xnest).desktop.in,
	  po/POTFILEs.in:  Add launchers for new flexi server and new
	  xnest flexiserver

	* gui/gdmlogin.c, daemon/slave.c: On flexi servers add the "Quit"
	  menu thingie, since it's just as useful as in xdmcp case here.
	  It should probably be a close button, not a Quit button.  I dunno.

Thu Aug 16 01:29:05 2001  George Lebl <jirka@5z.com>

	* configure.in, gui/gdmXnestchooser.c, gui/Makefile.am:  Add a proggie