@@ -40,6 +40,7 @@ english.us	en_US.ISO-8859-1
 english.gb	en_GB.ISO-8859-1
 finnish         fi_FI.ISO-8859-1
 french		fr_FR.ISO-8859-1
+galician	gl_ES.ISO-8859-1
 german		de_DE.ISO-8859-1
 greek           el_GR.ISO-8859-7
 hebrew          iw_IL.ISO-8859-8
@@ -55,6 +56,7 @@ norwegian       no_NO.ISO-8859-1
 nynorsk		nn_NO.ISO-8859-1
 polish          pl_PL.ISO-8859-2
 portuguese      pt_PT.ISO-8859-1
+portuguese.br	pt_BR.ISO-8859-1
 romanian        ro_RO.ISO-8859-2
 russian         ru_RU.ISO-8859-5
 slovak          sk_SK.ISO-8859-2
