@@ -53,6 +53,7 @@ gchar *s = N_("en_US");
 gchar *s = N_("en_UK");
 gchar *s = N_("fi_FI");
 gchar *s = N_("fr_FR");
+gchar *s = N_("gl_ES");
 gchar *s = N_("de_DE");
 gchar *s = N_("el_GR");
 gchar *s = N_("iw_IL");
@@ -66,6 +67,7 @@ gchar *s = N_("nn_NO");
 gchar *s = N_("no_NO");
 gchar *s = N_("pl_PL");
 gchar *s = N_("pt_PT");
+gchar *s = N_("pt_BR");
 gchar *s = N_("ro_RO");
 gchar *s = N_("ru_RU");
 gchar *s = N_("sk_SK");
