@@ -938,6 +938,7 @@ en_US
 en_UK
 fi_FI
 fr_FR
+gl_ES
 de_DE
 el_GR
 iw_IL
@@ -951,6 +952,7 @@ nn_NO
 no_NO
 pl_PL
 pt_PT
+pt_BR
 ro_RO
 ru_RU
 sk_SK
