@@ -1,3 +1,9 @@
+2001-08-19  Jesus Bravo Alvarez  <jba@pobox.com>
+
+	* config/locale.alias, gui/gdmlanguages.c, gui/gdmconfig.glade,
+	  gui/gdmconfig-strings.c: Added Galician (gl_ES) and Brazilian
+	  Portuguese (pt_BR) entries.
+
 Sat Aug 18 18:17:44 2001  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.[ch]: add some code for choosable servers (not
